--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -11,7 +11,7 @@
 <h2>Conference</h2>
 
 <ul>
-A three day digital conference.
+A three day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
 <h2>Schedule</h2>
