--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -14,26 +14,26 @@
 A three day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
-<h2>Schedule</h2>
+<h2>Schedule (times are given in GMT, UTC+0)</h2>
 <h3>Monday June 13</h3>
 <ul>
-  <li>1:15-1:30: Introduction</li>
-  <li>1:30-2:30: Speaker 1</li>
-  <li>2:30-3:30: Speaker 2</li>
+  <li>11:15am-11:30: Introduction</li>
+  <li>11:30-12:30: Speaker 1</li>
+  <li>12:30-1:30: Speaker 2</li>
 </ul>
 <br>
 <h3>Tuesday June 13</h3>
 <ul>
-  <li>12:30-1:30: Speaker 3</li>
-  <li>1:30-2:30: Speaker 4</li>
-  <li>2:30-3:30: Speaker 5</li>
+  <li>10:30am-11:30: Speaker 3</li>
+  <li>11:30-12:30: Speaker 4</li>
+  <li>12:30-1:30: Speaker 5</li>
 </ul>
 <br>
 <h3>Wednesday June 15</h3>
 <ul>
-  <li>12:30-1:30: Speaker 6</li>
-  <li>1:30-2:30: Speaker 7</li>
-  <li>2:30-3:00: Closing remarks</li>
+  <li>10:30am-11:30: Speaker 6</li>
+  <li>11:30-12:30: Speaker 7</li>
+  <li>12:30-1:30: Closing remarks</li>
 </ul>
 
 <h2>Organizing commitee</h2>
