--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -14,7 +14,8 @@
 A three day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
-<h2>Schedule (times are given in GMT, UTC+0)</h2>
+<h2>Schedule</h2>
+Times are given in GMT, UTC+0
 <h3>Monday June 13</h3>
 <ul>
   <li>11:15am-11:30: Introduction</li>
