--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -14,27 +14,45 @@
 A three day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
-<h2>Schedule</h2>
+<h2>Preliminary Schedule</h2>
 Times are given in GMT, UTC+0
 <h3>Monday June 13</h3>
 <ul>
   <li>11:15am-11:30: Introduction</li>
-  <li>11:30-12:30: Speaker 1</li>
-  <li>12:30-1:30: Speaker 2</li>
+  <li>11:30-12:30: Karl-Olof Lindahl</li>
+	<ul>
+		<li style="margin-left:2em">Linearization</li		
+	 </ul>
+  <li>12:30-1:30: Rufie Ren</li>
+	<ul>
+		<li style="margin-left:2em">Linearization</li		
+	 </ul>
 </ul>
 <br>
 <h3>Tuesday June 13</h3>
 <ul>
-  <li>10:30am-11:30: Speaker 3</li>
-  <li>11:30-12:30: Speaker 4</li>
-  <li>12:30-1:30: Speaker 5</li>
+  <li>10:30am-11:30: Juan Rivera-Letelier</li>
+	<ul>
+		<li style="margin-left:2em">XX</li		
+	 </ul>
+  <li>11:30-12:30: David</li>
+	<ul>
+		<li style="margin-left:2em">XX</li		
+	 </ul>
+ <!--- <li>12:30-1:30: Speaker 5</li>--->
 </ul>
 <br>
 <h3>Wednesday June 15</h3>
 <ul>
-  <li>10:30am-11:30: Speaker 6</li>
-  <li>11:30-12:30: Speaker 7</li>
-  <li>12:30-1:30: Closing remarks</li>
+  <li>10:30am-11:30: Matteo Ruggiero</li>
+	<ul>
+		<li style="margin-left:2em">Classification of one dimensional superattracting germs in positive characteristic</li		
+	 </ul>
+  <li>11:30-12:30: Jonas Nordqvist</li>
+	<ul>
+		<li style="margin-left:2em">Wildly ramified power series with large multiplicity</li		
+	 </ul>
+  <li>12:30-1:00: Closing remarks</li>
 </ul>
 
 <h2>Organizing commitee</h2>
