--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -3,6 +3,13 @@
 <html>
 <body>
 
+
+<script type="text/javascript" charset="utf-8" 
+src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML,
+https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
+
+
+
 <h1>Meeting on local dynamics in positive characteristic</h1>
 
 
@@ -21,11 +28,11 @@ Times are given in GMT, UTC+0
   <li>11:15am-11:30: Introduction</li>
   <li>11:30-12:30: Karl-Olof Lindahl</li>
 	<ul>
-		<li style="margin-left:2em">Linearization</li		
+		<li style="margin-left:2em">Linearization</li>		
 	 </ul>
   <li>12:30-1:30: Rufie Ren</li>
 	<ul>
-		<li style="margin-left:2em">Linearization</li		
+		<li style="margin-left:2em">Linearization</li>		
 	 </ul>
 </ul>
 <br>
@@ -33,11 +40,11 @@ Times are given in GMT, UTC+0
 <ul>
   <li>10:30am-11:30: Juan Rivera-Letelier</li>
 	<ul>
-		<li style="margin-left:2em">XX</li		
+		<li style="margin-left:2em">XX</li>		
 	 </ul>
   <li>11:30-12:30: David</li>
 	<ul>
-		<li style="margin-left:2em">XX</li		
+		<li style="margin-left:2em">XX</li>		
 	 </ul>
  <!--- <li>12:30-1:30: Speaker 5</li>--->
 </ul>
@@ -46,11 +53,11 @@ Times are given in GMT, UTC+0
 <ul>
   <li>10:30am-11:30: Matteo Ruggiero</li>
 	<ul>
-		<li style="margin-left:2em">Classification of one dimensional superattracting germs in positive characteristic</li		
+		<li style="margin-left:2em">Classification of one dimensional superattracting germs in positive characteristic</li>		
 	 </ul>
   <li>11:30-12:30: Jonas Nordqvist</li>
 	<ul>
-		<li style="margin-left:2em">Wildly ramified power series with large multiplicity</li		
+		<li style="margin-left:2em">Wildly ramified power series with large multiplicity</li>		
 	 </ul>
   <li>12:30-1:00: Closing remarks</li>
 </ul>
