--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -68,6 +68,29 @@ Times are given in GMT, UTC+0
 <li>Juan Rivera-Letelier, University of Rochester</li>
 <li>Jonas Nordqvist, Linnaeus University</li>
 </ul>
+
+
+<h2>Abstracts</h2>
+
+<h4>Karl-Olof Lindahl, Linearization</h4>
+Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
+
+<h4>Rufie Ren, Linearization</h4>
+Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
+<h4>Juan Rivera-Letelier, XX</h4>
+Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
+<h4>David, XX</h4>
+Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
+<h4>Matteo Ruggiero, Classification...</h4>
+Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
+<h4>Jonas Nordqvist, Wildly ramified power series with large multiplicity</h4>
+In this talk we consider wildly ramified power series, <it><i.e.</it>, power series defined over a field of positive characteristic, fixing the origin, where it is tangent to the identity. In this setting we introduce a new invariant under change of coordinates called the <it>second residue fixed point index</it>, and provide a closed formula for it. As the name suggests this invariant is closely related to the residue fixed point index, and they coincide in the case that the power series have small multiplicity. Finally, we characterize power series with large multiplicity having the smallest possible multiplicity at the origin under iteration, in terms of this new invariant.
+
 </body>
 </html> 
 
