--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -10,7 +10,7 @@ https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 
 
 
-<h1>Meeting on local dynamics in positive characteristic</h1>
+<h1>Meeting on local dynamics in positive characteristic, 2022</h1>
 
 
 <hr>
@@ -28,11 +28,11 @@ Times are given in GMT, UTC+0
   <li>11:15am-11:30: Introduction</li>
   <li>11:30-12:30: Karl-Olof Lindahl</li>
 	<ul>
-		<li>Linearization</li>		
+		<li></li>		
 	 </ul>
   <li>12:30-1:30: Rufie Ren</li>
 	<ul>
-		<li>Linearization</li>		
+		<li></li>		
 	 </ul>
 </ul>
 <br>
@@ -40,11 +40,11 @@ Times are given in GMT, UTC+0
 <ul>
   <li>10:30am-11:30: Juan Rivera-Letelier</li>
 	<ul>
-		<li>XX</li>		
+		<li></li>		
 	 </ul>
   <li>11:30-12:30: David</li>
 	<ul>
-		<li>XX</li>		
+		<li></li>		
 	 </ul>
  <!--- <li>12:30-1:30: Speaker 5</li>--->
 </ul>
@@ -72,20 +72,20 @@ Times are given in GMT, UTC+0
 
 <h2>Abstracts</h2>
 
-<h4>Karl-Olof Lindahl, Linearization</h4>
+<h4>Karl-Olof Lindahl</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
 
-<h4>Rufie Ren, Linearization</h4>
+<h4>Rufie Ren</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
-<h4>Juan Rivera-Letelier, XX</h4>
+<h4>Juan Rivera-Letelier</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
-<h4>David, XX</h4>
+<h4>David</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
-<h4>Matteo Ruggiero, Classification...</h4>
+<h4>Matteo Ruggiero, Classification of one dimensional superattracting germs in positive characteristic</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
 <h4>Jonas Nordqvist, Wildly ramified power series with large multiplicity</h4>
