--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -23,43 +23,44 @@ A three day digital conference on Zoom. To participate please contact the organi
 
 <h2>Preliminary Schedule</h2>
 Times are given in GMT, UTC+0
-<h3>Monday June 13</h3>
+<h3>Tuesday June 14</h3>
 <ul>
-  <li>11:15am-11:30: Introduction</li>
-  <li>11:30-12:30: Karl-Olof Lindahl</li>
+  <li>10:30am-10:45: Introduction</li>
+  <li>10:45-11:40: Karl-Olof Lindahl, Linnaeus University</li>
 	<ul>
-		<li></li>		
+		<li>TBA</li>		
 	 </ul>
-  <li>12:30-1:30: Rufie Ren</li>
+  <li>11:40-12:35: Rufie Ren, Fudan University</li>
 	<ul>
-		<li></li>		
+		<li>Non-linearizability of power series over non-archimedean fields of positive characteristic</li>		
 	 </ul>
 </ul>
-<br>
-<h3>Tuesday June 13</h3>
-<ul>
-  <li>10:30am-11:30: Juan Rivera-Letelier</li>
-	<ul>
-		<li></li>		
-	 </ul>
-  <li>11:30-12:30: David</li>
-	<ul>
-		<li></li>		
-	 </ul>
- <!--- <li>12:30-1:30: Speaker 5</li>--->
-</ul>
-<br>
-<h3>Wednesday June 15</h3>
-<ul>
-  <li>10:30am-11:30: Matteo Ruggiero</li>
-	<ul>
-		<li>Classification of one dimensional superattracting germs in positive characteristic</li>		
-	 </ul>
-  <li>11:30-12:30: Jonas Nordqvist</li>
+  <li>12:35-1:30: Jonas Nordqvist, Linnaeus University</li>
 	<ul>
 		<li>Wildly ramified power series with large multiplicity</li>		
 	 </ul>
-  <li>12:30-1:00: Closing remarks</li>
+<br>
+
+<h3>Wednesday June 15</h3>
+<ul>
+  <li>10:30am-11:25: Juan Rivera-Letelier, University of Rochester</li>
+	<ul>
+		<li>TBA</li>		
+	 </ul>
+  <li>11:25-12:20: David Crnčević, University of Rochester</li>
+	<ul>
+		<li>Sen's theorem on wildly ramified power series</li>		
+	 </ul>
+  <li>12:20-1:15: Matteo Ruggiero, Paris Diderot University</li>
+	<ul>
+		<li>On the dynamics of non-invertible germs in positive characteristic</li>		
+	 </ul>
+
+  <li>1:15-1:30: Closing remarks</li>
+</ul>
+
+<ul>
+
 </ul>
 
 
@@ -67,23 +68,25 @@ Times are given in GMT, UTC+0
 <h2>Abstracts</h2>
 
 <h4>Karl-Olof Lindahl</h4>
-Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+TBA
 
 
-<h4>Rufie Ren</h4>
-Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
-
-<h4>Juan Rivera-Letelier</h4>
-Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
-
-<h4>David</h4>
-Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
-
-<h4>Matteo Ruggiero, Classification of one dimensional superattracting germs in positive characteristic</h4>
+<h4>Rufie Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
 Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
 
 <h4>Jonas Nordqvist, Wildly ramified power series with large multiplicity</h4>
 In this talk we consider wildly ramified power series, <it><i.e.</it>, power series defined over a field of positive characteristic, fixing the origin, where it is tangent to the identity. In this setting we introduce a new invariant under change of coordinates called the <it>second residue fixed point index</it>, and provide a closed formula for it. As the name suggests this invariant is closely related to the residue fixed point index, and they coincide in the case that the power series have small multiplicity. Finally, we characterize power series with large multiplicity having the smallest possible multiplicity at the origin under iteration, in terms of this new invariant.
+
+<h4>Juan Rivera-Letelier</h4>
+TBA
+
+<h4>David Crnčević, Sen's theorem on wildly ramified power series</h4>
+While studying minimally ramified power series, Lindahl and Rivera-Letelier extensively use a result of generalized Sen's theorem. In this talk we will state the generalized Sen’s theorem and prove the basic case of the theorem that was originally introduced by Shankar Sen.
+
+<h4>Matteo Ruggiero, On the dynamics of non-invertible germs in positive characteristic</h4>
+We focus on the local dynamics of non-invertible analytic germs f:(K^d,0) -> (K^d,0) on a complete normed field K. In dimension $$d=1$$, Böttcher's theorem states that if K has characteristic $$0$$, then $$f$$ is analytically conjugated to a monomial map. The situation is more involved in positive characteristic, especially when the order of $$f$$ at $$0$$ is a multiple of the characteristic of $$K$$. In this talk we provide normal forms, and show that the formal and analytical classifications coincide, answering a question of Ecalle's in this setting. If time allows, we will discuss known results in higher dimensions.
+
+
 
 
 
