--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -72,7 +72,7 @@ TBA
 
 
 <h4>Rufie Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
-Etiam rhoncus ultricies dolor in porta. Phasellus at enim lorem. Morbi purus quam, porta eget sodales venenatis, imperdiet ut lorem. Aenean finibus elit eu nunc sagittis interdum. Vestibulum tempor ultricies lacinia. In libero nibh, sagittis eu tincidunt et, eleifend eu lorem. Praesent in diam elementum, fermentum nulla vitae, venenatis libero.
+
 
 <h4>Jonas Nordqvist, Wildly ramified power series with large multiplicity</h4>
 In this talk we consider wildly ramified power series, <it><i.e.</it>, power series defined over a field of positive characteristic, fixing the origin, where it is tangent to the identity. In this setting we introduce a new invariant under change of coordinates called the <it>second residue fixed point index</it>, and provide a closed formula for it. As the name suggests this invariant is closely related to the residue fixed point index, and they coincide in the case that the power series have small multiplicity. Finally, we characterize power series with large multiplicity having the smallest possible multiplicity at the origin under iteration, in terms of this new invariant.
@@ -84,7 +84,7 @@ TBA
 While studying minimally ramified power series, Lindahl and Rivera-Letelier extensively use a result of generalized Sen's theorem. In this talk we will state the generalized Sen’s theorem and prove the basic case of the theorem that was originally introduced by Shankar Sen.
 
 <h4>Matteo Ruggiero, On the dynamics of non-invertible germs in positive characteristic</h4>
-We focus on the local dynamics of non-invertible analytic germs f:(K^d,0) -> (K^d,0) on a complete normed field K. In dimension $$d=1$$, Böttcher's theorem states that if K has characteristic $$0$$, then $$f$$ is analytically conjugated to a monomial map. The situation is more involved in positive characteristic, especially when the order of $$f$$ at $$0$$ is a multiple of the characteristic of $$K$$. In this talk we provide normal forms, and show that the formal and analytical classifications coincide, answering a question of Ecalle's in this setting. If time allows, we will discuss known results in higher dimensions.
+We focus on the local dynamics of non-invertible analytic germs $f:(K^d,0) \to (K^d,0)$ on a complete normed field $K$. In dimension $d=1$, Böttcher's theorem states that if $K$ has characteristic $0$, then $f$ is analytically conjugated to a monomial map. The situation is more involved in positive characteristic, especially when the order of $f$ at $0$ is a multiple of the characteristic of $K$. In this talk we provide normal forms, and show that the formal and analytical classifications coincide, answering a question of Ecalle's in this setting. If time allows, we will discuss known results in higher dimensions.
 
 
 
