--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -73,7 +73,7 @@ TBA
 
 
 <h4>Rufie Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
-
+In this talk, I will introduce a criterion to test a power series of positive characteristic $p$ being non-linearizable. With the criterion, we can prove polynomials of some certain forms to be non-linearizable, e.g. polynomials of the form $\lambda z + a_1 z^2 + a_2 z^p$, and $\lambda z + a_1 z^2 + a_2 z^3$ with some generic conditions when $0 < |\lambda -1| < 1$. Moreover, very recently, we found that with an identity proved by Don Zagier, this criterion can prove $\lambda z + a_1 z^2$ being non-linearizable for large $p$ when $|1-\lambda|>0$.
 
 <h4>Jonas Nordqvist, Wildly ramified power series with large multiplicity</h4>
 In this talk we consider wildly ramified power series, <it><i.e.</it>, power series defined over a field of positive characteristic, fixing the origin, where it is tangent to the identity. In this setting we introduce a new invariant under change of coordinates called the <it>second residue fixed point index</it>, and provide a closed formula for it. As the name suggests this invariant is closely related to the residue fixed point index, and they coincide in the case that the power series have small multiplicity. Finally, we characterize power series with large multiplicity having the smallest possible multiplicity at the origin under iteration, in terms of this new invariant.
