--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -18,7 +18,7 @@ https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 <h2>Conference</h2>
 
 <ul>
-A three day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
+A two day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
 <h2>Preliminary Schedule</h2>
