--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -30,7 +30,7 @@ Times are given in GMT, UTC+0
 	<ul>
 		<li>TBA</li>		
 	 </ul>
-  <li>11:40-12:35: Rufie Ren, Fudan University</li>
+  <li>11:40-12:35: Rufei Ren, Fudan University</li>
 	<ul>
 		<li>Non-linearizability of power series over non-archimedean fields of positive characteristic</li>		
 	 </ul>
@@ -46,7 +46,7 @@ Times are given in GMT, UTC+0
 <ul>
   <li>10:30am-11:25: Juan Rivera-Letelier, University of Rochester</li>
 	<ul>
-		<li>TBA</li>		
+		<li>On the no small cycles conjecture.</li>		
 	 </ul>
   <li>11:25-12:20: David Crnčević, University of Rochester</li>
 	<ul>
@@ -72,7 +72,7 @@ Times are given in GMT, UTC+0
 TBA
 <br>
 
-<h4>Rufie Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
+<h4>Rufei Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
 In this talk, I will introduce a criterion to test a power series of positive characteristic $p$ being non-linearizable. With the criterion, we can prove polynomials of some certain forms to be non-linearizable, e.g. polynomials of the form $\lambda z + a_1 z^2 + a_2 z^p$, and $\lambda z + a_1 z^2 + a_2 z^3$ with some generic conditions when $0 < |\lambda -1| < 1$. Moreover, very recently, we found that with an identity proved by Don Zagier, this criterion can prove $\lambda z + a_1 z^2$ being non-linearizable for large $p$ when $|1-\lambda|>0$.
 <br>
 
@@ -80,8 +80,9 @@ In this talk, I will introduce a criterion to test a power series of positive ch
 In this talk we consider wildly ramified power series, <it><i.e.</it>, power series defined over a field of positive characteristic, fixing the origin, where it is tangent to the identity. In this setting we introduce a new invariant under change of coordinates called the <it>second residue fixed point index</it>, and provide a closed formula for it. As the name suggests this invariant is closely related to the residue fixed point index, and they coincide in the case that the power series have small multiplicity. Finally, we characterize power series with large multiplicity having the smallest possible multiplicity at the origin under iteration, in terms of this new invariant.
 <br>
 
-<h4>Juan Rivera-Letelier</h4>
-TBA
+<h4>Juan Rivera-Letelier, On the no small cycles conjecture.</h4>
+Motivated by results of Yoccoz and Perez-Marco in complex dynamics, about a decade ago Lindahl and I conjectured that there are no small cycles in positive characteristic. We solve this conjecture affirmatively for every power series outside a set of infinite codimension.
+This is a joint work with Rufei Ren.
 <br>
 
 <h4>David Crnčević, Sen's theorem on wildly ramified power series</h4>
