--- a/meeting-local-dyn/index.html
+++ b/meeting-local-dyn/index.html
@@ -21,14 +21,14 @@ https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 A two day digital conference on Zoom. To participate please contact the organizers for a link to Zoom.
 </ul>
 
-<h2>Preliminary Schedule</h2>
+<h2>Schedule</h2>
 Times are given in GMT, UTC+0
 <h3>Tuesday June 14</h3>
 <ul>
   <li>10:30am-10:45: Introduction</li>
   <li>10:45-11:40: Karl-Olof Lindahl, Linnaeus University</li>
 	<ul>
-		<li>TBA</li>		
+		<li>On the Siegel center problem in positive characteristic.</li>		
 	 </ul>
   <li>11:40-12:35: Rufei Ren, Fudan University</li>
 	<ul>
@@ -68,8 +68,8 @@ Times are given in GMT, UTC+0
 
 <h2>Abstracts</h2>
 
-<h4>Karl-Olof Lindahl</h4>
-TBA
+<h4>Karl-Olof Lindahl,  On the Siegel center problem in positive characteristic</h4>
+We discuss the problem and some results regarding the linearization near non-parabolic indifferent fixed points for power series in one variable defined over fields of positive characteristic.
 <br>
 
 <h4>Rufei Ren, Non-linearizability of power series over non-archimedean fields of positive characteristic</h4>
