--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@ https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 
 <ul>
 <li><a href="https://arxiv.org/abs/1909.10782">Wildly ramified power series with large multiplicity</a>. Published in Journal of Number Theory</li>
-<li>Paper B</li>
+<li><a href="https://arxiv.org/abs/1904.04494">Residue fixed point index and wildly ramified power series</a>. (Joint work with Juan Rivera-Letelier). Published in Journal of London Math. Soc.</li>
+<li><a href="https://arxiv.org/abs/1705.08630">Geometric location of periodic points of 2-ramified power series</a>. (Joint work with Karl-Olof Lindahl). Journal of Mathematical Analysis and Applications.</li>
+<li><a href="Characterization of 2-ramified power series">Characterization of 2-ramified power series</a>. Published in Journal of Number Theory</li>
+
+
+
+
 </ul>
 
 <h3>Statistical learning/ML</h3>
