--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@ https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 <h3>Statistical learning/ML</h3>
 
 <ul>
-<li>Paper A</li>
-<li>Paper B</li>
+<li><a href="https://arxiv.org/abs/2112.07424">Conjugated Discrete Distributions for Distributional Reinforcement Learning</a> (Joint work with Björn Lindenberg and Karl-Olof Lindahl). Proceedings of the AAAI-22.</li>
+<li><a href="https://arxiv.org/abs/2003.10903">Distributional Reinforcement Learning with Ensembles</a> (Joint work with Björn Lindenberg and Karl-Olof Lindahl). Published in Algorithms.</li>
+<li>An Investigation on the Impact of Non-Uniform Random Sampling Techniques for t-SNE. (Joint work with Matej Buljan and Rafael M. Martins). Proceedings of the SweDS-20.
+</li>
+<li> Towards a language independent Twitter bot detector. (Joint work with J. Lundberg and M. Laitinen). Conference paper.</li>
+<li>Current Safety Concerns with Human Papillomavirus Vaccine: A Cluster Analysis of Reports in VigiBase®, (Joint work with R. Chandler et.al.). Published in Drug Safety.
+</li>
 </ul>
 
 
