--- a/kosta/index.html
+++ b/kosta/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <h1>Vektorberäkning</h1>
-  <label for="inputVector">Skriv ner er vektor (t.ex. 1, 2, 3, 4, 5, 6, 7, 8, 9):</label>
+  <label for="inputVector">Skriv ner er vektor (t.ex. [1, 2, 3, 4, 5, 6, 7, 8, 9]):</label>
   <input type="text" id="inputVector" placeholder="Ange vektorn här">
-  <button onclick="calculate()">Beräkna inversioner</button>
+  <button onclick="countInversions()">Beräkna inversioner</button>
   <p id="result"></p>
 
   <script>
@@ -24,6 +24,51 @@
 
       document.getElementById("result").innerHTML = `Summa: ${sum}, Medelvärde: ${avg}`;
     }
+  
+
+  function countInversions(arr) {
+  let count = 0;
+
+  function mergeSort(arr) {
+    if (arr.length <= 1) {
+      return arr;
+    }
+
+    const middle = Math.floor(arr.length / 2);
+    const left = arr.slice(0, middle);
+    const right = arr.slice(middle);
+
+    return merge(mergeSort(left), mergeSort(right));
+  }
+
+  function merge(left, right) {
+    let result = [];
+    let leftIndex = 0;
+    let rightIndex = 0;
+
+    while (leftIndex < left.length && rightIndex < right.length) {
+      if (left[leftIndex] <= right[rightIndex]) {
+        result.push(left[leftIndex]);
+        leftIndex++;
+      } else {
+        result.push(right[rightIndex]);
+        rightIndex++;
+        count += left.length - leftIndex;
+      }
+    }
+
+    return result.concat(left.slice(leftIndex)).concat(right.slice(rightIndex));
+  }
+
+  mergeSort(arr);
+  return count;
+}
+
+const vector = document.getElementById("inputVector").value;
+const inversionCount = countInversions(vector);
+console.log("Antal inversioner:", inversionCount);
   </script>
+
+  
 </body>
 </html>
