--- a/kosta/index.html
+++ b/kosta/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h1>Räkna ut din poäng</h1>
+  <h1>Räkna ut er poäng</h1>
   <label for="inputVector">Skriv ner er vektor (t.ex. [1, 2, 3, 4, 5, 6, 7, 8, 9]):</label>
   <input type="text" id="inputVector" placeholder="Ange vektorn här">
   <button onclick="countInversions()">Beräkna inversioner</button>
@@ -66,7 +66,7 @@
 }
 
 
-const inversionCount = countInversions(vector);
+const inversionCount = countInversions();
 document.getElementById("result").innerHTML = `Summa: ${inversionCount}, Medelvärde: ${inversionCount}`;
   </script>
 
