--- a/kosta/index.html
+++ b/kosta/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h1>Räkna ut er poäng</h1>
+  <h1>Räkna ut er poäng -- och vinn feta priser</h1>
   <label for="inputVector">Skriv ner er vektor (t.ex. [1, 2, 3, 4, 5, 6, 7, 8, 9]):</label>
   <input type="text" id="inputVector" placeholder="Ange vektorn här">
   <button onclick="countInversions()">Beräkna inversioner</button>
