--- a/kosta/index.html
+++ b/kosta/index.html
@@ -1,68 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The force is strong with this one</title>
-  <style>
-    #inputVector {
-      width: 300px;
-    }
-  </style>
+  <title>Antal Inversioner Beräknare</title>
 </head>
 <body>
-  <h1>Räkna ut er poäng -- och vinn feta priser</h1>
-  <label for="inputVector">Skriv ner er vektor (t.ex. [1, 2, 3, 4, 5, 6, 7, 8, 9]):</label>
-  <input type="text" id="inputVector" placeholder="Ange vektorn här">
-  <button onclick="countInversions()">Beräkna inversioner</button>
+  <h1>Antal Inversioner Beräknare</h1>
+  <form id="inversionForm">
+    <label for="vector">Mata in vektorn (kommaseparerade tal):</label>
+    <input type="text" id="vector" name="vector" required>
+    <button type="submit">Beräkna</button>
+  </form>
   <p id="result"></p>
 
   <script>
-    
-  
+    function countInversions(arr) {
+      let count = 0;
 
-  function countInversions() {
-    const vector = document.getElementById("inputVector").value;
-    let count = 0;
+      function mergeSort(arr) {
+        if (arr.length <= 1) {
+          return arr;
+        }
 
-  function mergeSort(arr) {
-    if (arr.length <= 1) {
-      return arr;
-    }
+        const middle = Math.floor(arr.length / 2);
+        const left = arr.slice(0, middle);
+        const right = arr.slice(middle);
 
-    const middle = Math.floor(arr.length / 2);
-    const left = arr.slice(0, middle);
-    const right = arr.slice(middle);
-
-    return merge(mergeSort(left), mergeSort(right));
-  }
-
-  function merge(left, right) {
-    let result = [];
-    let leftIndex = 0;
-    let rightIndex = 0;
-
-    while (leftIndex < left.length && rightIndex < right.length) {
-      if (left[leftIndex] <= right[rightIndex]) {
-        result.push(left[leftIndex]);
-        leftIndex++;
-      } else {
-        result.push(right[rightIndex]);
-        rightIndex++;
-        count += left.length - leftIndex;
+        return merge(mergeSort(left), mergeSort(right));
       }
+
+      function merge(left, right) {
+        let result = [];
+        let leftIndex = 0;
+        let rightIndex = 0;
+
+        while (leftIndex < left.length && rightIndex < right.length) {
+          if (left[leftIndex] <= right[rightIndex]) {
+            result.push(left[leftIndex]);
+            leftIndex++;
+          } else {
+            result.push(right[rightIndex]);
+            rightIndex++;
+            count += left.length - leftIndex;
+          }
+        }
+
+        return result.concat(left.slice(leftIndex)).concat(right.slice(rightIndex));
+      }
+
+      mergeSort(arr);
+      return count;
     }
 
-    return result.concat(left.slice(leftIndex)).concat(right.slice(rightIndex));
-  }
-
-  mergeSort(arr);
-  return count;
-}
-
-
-const inversionCount = countInversions();
-document.getElementById("result").innerHTML = `Summa: ${inversionCount}, Medelvärde: ${inversionCount}`;
+    document.getElementById("inversionForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const vectorInput = document.getElementById("vector").value;
+      const vector = vectorInput.split(",").map(Number);
+      const inversionCount = countInversions(vector);
+      document.getElementById("result").innerText = "Antal inversioner: " + inversionCount;
+    });
   </script>
-
-  
 </body>
 </html>
