--- a/kosta/index.html
+++ b/kosta/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Antal Inversioner Beräknare</title>
+  <title>The force is strong with this one -- Matematik i Kosta</title>
 </head>
 <body>
-  <h1>Antal Inversioner Beräknare</h1>
+  <h1>Räkna ut er poäng</h1>
+  Kom ihåg att ju färre antal inversioner desto bättre.
   <form id="inversionForm">
-    <label for="vector">Mata in vektorn (kommaseparerade tal):</label>
+    <label for="vector">Mata ert lista (kommaseparerade tal):</label>
     <input type="text" id="vector" name="vector" required>
     <button type="submit">Beräkna</button>
   </form>
