--- a/kosta/index.html
+++ b/kosta/index.html
@@ -8,7 +8,7 @@
   Kom ihåg att ju färre antal inversioner desto bättre.
   <form id="inversionForm">
     <label for="vector">Mata ert lista (kommaseparerade tal):</label>
-    <input type="text" id="vector" name="vector" required>
+ <input type="text" id="vector" name="vector" required pattern="^([1-9]|1[0-2])(,[1-9]|1[0-2])*$">
     <button type="submit">Beräkna</button>
   </form>
   <p id="result"></p>
