--- a/kosta/index.html
+++ b/kosta/index.html
@@ -9,7 +9,7 @@
 
   <br>
   <form id="inversionForm">
-    <label for="vector">Mata er lista (kommaseparerade tal mellan 1 och 12, t.ex. 1,2,3,4,5,6,7,8,9,10,11,12):</label>
+    <label for="vector">Mata in er lista (kommaseparerade tal mellan 1 och 12, t.ex. 1,2,3,4,5,6,7,8,9,10,11,12):</label>
  <input type="text" id="vector" name="vector" required pattern="^([1-9]|1[0-2])(,[1-9]|1[0-2])*$">
     <button type="submit">Beräkna</button>
   </form>
