--- a/kosta/index.html
+++ b/kosta/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Räkna ut er poäng*</h1>
-  Lägst poäng vinner. Lägsta möjliga poäng är 0, och sämsta möjliga är 36. Poängen beräknas som minsta antalet <a href="https://sv.wikipedia.org/wiki/Inversion_(kombinatorik)">inversioner</a>.
+  Lägst poäng vinner. Lägsta möjliga poäng är 0, och sämsta möjliga är 36. Poängen beräknas som antalet <a href="https://sv.wikipedia.org/wiki/Inversion_(kombinatorik)">inversioner</a>.
 
 
   <br><br>
