--- a/kosta/index.html
+++ b/kosta/index.html
@@ -19,7 +19,7 @@
   <script>
     function countInversions(arr) {
       let count = 0;
-      arr = replaceNumbers(arr)
+      #arr = replaceNumbers(arr)
       function mergeSort(arr) {
         if (arr.length <= 1) {
           return arr;
