--- a/kosta/index.html
+++ b/kosta/index.html
@@ -4,7 +4,7 @@
   <title>The force is strong with this one -- Matematik i Kosta</title>
 </head>
 <body>
-  <h1>Räkna ut er poäng*</h1>
+  <h1>Räkna ut er poäng</h1>
   Lägst poäng vinner. Lägsta möjliga poäng är 0, och sämsta möjliga är 36. Poängen beräknas som antalet <a href="https://sv.wikipedia.org/wiki/Inversion_(kombinatorik)">inversioner</a>.
 
 
