--- a/kosta/index.html
+++ b/kosta/index.html
@@ -5,12 +5,12 @@
 </head>
 <body>
   <h1>Räkna ut er poäng</h1>
-  Lägst poäng vinner. Lägsta möjliga poäng är 0, och högsta möjliga är 36. Poängen beräknas som antalet <a href="https://sv.wikipedia.org/wiki/Inversion_(kombinatorik)">inversioner</a>.
+  Lägst poäng vinner. Lägsta möjliga poäng är 0, och högsta möjliga är 66. Poängen beräknas som antalet <a href="https://sv.wikipedia.org/wiki/Inversion_(kombinatorik)">inversioner</a>.
 
 
   <br><br>
   <form id="inversionForm">
-    <label for="vector">Mata in er lista (kommaseparerade tal, t.ex. 1, 7, 6, 2, ...):</label>
+    <label for="vector">Mata in er lista som kommaseparerade tal, t.ex. 1, 7, 6, 2, ... (låtens siffra är dess ordning som den spelades i):</label>
  <input type="text" id="vector" name="vector" required>
     <button type="submit">Beräkna</button>
   </form>
