--- a/kosta/index.html
+++ b/kosta/index.html
@@ -10,7 +10,7 @@
 
   <br><br>
   <form id="inversionForm">
-    <label for="vector">Mata in er lista som kommaseparerade tal, t.ex. 1, 7, 6, 2, ... (låtens siffra är dess ordning som den spelades i):</label>
+    <label for="vector">Mata in er lista som kommaseparerade tal, t.ex. 1, 7, 6, 2, ... (talen i listan avser låtens spelordning):</label>
  <input type="text" id="vector" name="vector" required>
     <button type="submit">Beräkna</button>
   </form>
