--- a/Moose/index.html
+++ b/Moose/index.html
@@ -38,14 +38,14 @@
       font-size: 1em;
       cursor: pointer;
       border: none;
-      background-color: #28a745;
+      background-color: #007bff;
       color: white;
       border-radius: 5px;
       margin-top: 10px;
     }
 
     button:hover {
-      background-color: #218838;
+      background-color: #0056b3;
     }
 
     #newJokeButton {
@@ -59,8 +59,14 @@
   </style>
   <script>
     const jokes = [
-      { setup: "Vad är älgarnas favoritmat?", punchline: "Potatis-moose" },
-      { setup: "Vem är älgens favoritsläkting?", punchline: "Moose-tern" },
+      { setup: "Vad är älgarnas favoritmat?", punchline: "Potatismoose" },
+      { setup: "Vem är älgens favoritsläkting?", punchline: "Moostern" },
+      { setup: "Vilken del av veckan gillar älgen bäst?", punchline: "Hälgen" },
+      { setup: "Vilken älgens favoritfågel?", punchline: "Fiskmoosen" },
+      { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen" },
+      { setup: "Vad dricker älgen helst?", punchline: "Julmoost" },
+      { setup: "Vad är älgens favoritansiktsbehåring?", punchline: "Moostache" },
+      { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen" },
     ];
 
     function showRandomJoke() {
