--- a/Moose/index.html
+++ b/Moose/index.html
@@ -66,6 +66,7 @@
       { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen" },
       { setup: "Vad dricker älgen helst?", punchline: "Julmoost" },
       { setup: "Vad är älgens favoritansiktsbehåring?", punchline: "Moostache" },
+      { setup: "Hur räknar älgen till 10,000?", punchline: "Katten, moosen, tio tusen." },
     ];
 
     function showRandomJoke() {
