--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -59,14 +59,23 @@
   </style>
   <script>
     const jokes = [
-      { setup: "Vad är älgarnas favoritmat?", punchline: "Potatismoose" },
-      { setup: "Vem är älgens favoritsläkting?", punchline: "Moostern" },
-      { setup: "Vilken del av veckan gillar älgen bäst?", punchline: "Hälgen" },
-      { setup: "Vilken älgens favoritfågel?", punchline: "Fiskmoosen" },
-      { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen" },
-      { setup: "Vad dricker älgen helst?", punchline: "Julmoost" },
-      { setup: "Vad är älgens favoritansiktsbehåring?", punchline: "Moostache" },
+      { setup: "Vad är älgarnas favoritmat?", punchline: "Potatismoose." },
+      { setup: "Vem är älgens favoritsläkting?", punchline: "Moostern." },
+      { setup: "Vilken del av veckan gillar älgen bäst?", punchline: "Hälgen." },
+      { setup: "Vilken älgens favoritfågel?", punchline: "Fiskmoosen." },
+      { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen." },
+      { setup: "Vad dricker älgen helst?", punchline: "Julmoost." },
+      { setup: "Vad är älgens favoritansiktsbehåring?", punchline: "Moostasch." },
       { setup: "Hur räknar älgen till 10,000?", punchline: "Katten, moosen, tio tusen." },
+      { setup: "Är fem älgar fler än fyra elefanter?", punchline: "Ja, det mooste man nog säga." },
+      { setup: "Varför hänger Ranelid med älgen?", punchline: "Älgen är Ranelids moosa." },
+      { setup: "Varför fick älgen gå till läkaren?", punchline: "Han fick moosarm." },
+      { setup: "Varför är älgen så kultiverad?", punchline: "Hon hänger alltid på mooseum." },
+      { setup: "Hur skiljer man enklast en älg från en ren?", punchline: "På moosklerna." },
+      { setup: "Vilken älg går till historien för sin hemska dåd?", punchline: "Moosolini." },
+      { setup: "Vad lyssnar helst älgarna till?", punchline: "Det är ju moosik." },
+      { setup: "Hur vet älgarna när de ska vakna?", punchline: "De lyssnar bara efter revälgen." },
+      { setup: "Vad mäter en vuxen älg i mankhöjd?", punchline: "Upp till 230 cm. Det var inte så roligt, men det var sant." },
     ];
 
     function showRandomJoke() {
