--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -118,6 +118,11 @@
   <button id="revealButton" onclick="revealPunchline()">Please, do tell me!</button>
   <button id="newJokeButton" onclick="showRandomJoke()">En till!</button>
 
+
+  <footer>
+    <p>&copy; Nordner Moose Inc. 2025</p>
+  </footer>
+
 </body>
 
 </html>
