--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -118,10 +118,10 @@
   <button id="revealButton" onclick="revealPunchline()">Please, do tell me!</button>
   <button id="newJokeButton" onclick="showRandomJoke()">En till!</button>
 
-  <br><br><br><br><br><br><br><br><br><br>
+  <!---<br><br><br><br><br><br><br><br><br><br>
   <footer>
     <p>&copy; Nordner Moose Inc. 2025</p>
-  </footer>
+  </footer>-->
 
 </body>
 
