--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -76,7 +76,9 @@
       { setup: "Vad lyssnar helst älgarna till?", punchline: "Det är ju moosik." },
       { setup: "Hur vet älgarna när de ska vakna?", punchline: "De lyssnar bara efter revälgen." },
       { setup: "Vad mäter en vuxen älg i mankhöjd?", punchline: "Upp till 230 cm. Det var inte så roligt, men det var sant." },
-      { setup: "Vad heter Dumas älgbok??", punchline: "De tre moosketörerna." },
+      { setup: "Vad heter Dumas älgbok?", punchline: "De tre moosketörerna." },
+      { setup: "Varför beter sig älgen så konstigt?", punchline: "Jag vet inte, men älgar är allt lite älgest." },
+      { setup: "Hur inleder älgen sin helg?", punchline: "Tacos och fredagsmoose." },
     ];
 
     function showRandomJoke() {
