--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -62,7 +62,7 @@
       { setup: "Vad är älgarnas favoritmat?", punchline: "Potatismoose." },
       { setup: "Vem är älgens favoritsläkting?", punchline: "Moostern." },
       { setup: "Vilken del av veckan gillar älgen bäst?", punchline: "Hälgen." },
-      { setup: "Vilken älgens favoritfågel?", punchline: "Fiskmoosen." },
+      { setup: "Vilken är älgens favoritfågel?", punchline: "Fiskmoosen." },
       { setup: "Vilken tid på året tar älgen det som mest lugnt?", punchline: "Julhälgen." },
       { setup: "Vad dricker älgen helst?", punchline: "Julmoost." },
       { setup: "Vad är älgens favoritansiktsbehåring?", punchline: "Moostasch." },
