--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -79,6 +79,10 @@
       { setup: "Vad heter Dumas älgbok?", punchline: "De tre moosketörerna." },
       { setup: "Varför beter sig älgen så konstigt?", punchline: "Jag vet inte, men älgar är allt lite älgest." },
       { setup: "Hur inleder älgen sin helg?", punchline: "Tacos och fredagsmoose." },
+      { setup: "Vad väljer helst älgen på sin pizza?", punchline: "Endast tomat och moosarella." },
+      { setup: "Vad kör älgen ?", punchline: "Älgen kör en Moostang." },
+      { setup: "Vad dricker älgarna till frukost?", punchline: "Åtminstone på semestern så dricker den mimoosa." },
+      { setup: "Varför är älgen så trött när helgen kommer?", punchline: "För att hela veckan bestått av en massa moosten." },
     ];
 
     function showRandomJoke() {
