--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -83,6 +83,9 @@
       { setup: "Vad kör älgen ?", punchline: "Älgen kör en Moostang." },
       { setup: "Vad dricker älgarna till frukost?", punchline: "Åtminstone på semestern så dricker den mimoosa." },
       { setup: "Varför är älgen så trött när helgen kommer?", punchline: "För att hela veckan bestått av en massa moosten." },
+      { setup: "Vad heter den mest musikaliska älgen?", punchline: "Det är Wolfgang Amadeus Moozart." },
+      { setup: "Var tillverkar älgarna sitt vin?", punchline: "Deras vin görs framförallt i Mooseldalen." },
+
     ];
 
     function showRandomJoke() {
