--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -85,7 +85,6 @@
       { setup: "Varför är älgen så trött när helgen kommer?", punchline: "För att hela veckan bestått av en massa moosten." },
       { setup: "Vad heter den mest musikaliska älgen?", punchline: "Det är Wolfgang Amadeus Moozart." },
       { setup: "Var tillverkar älgarna sitt vin?", punchline: "Deras vin görs framförallt i Mooseldalen." },
-
     ];
 
     function showRandomJoke() {
@@ -115,7 +114,7 @@
 
 <body onload="showRandomJoke()">
 
-  <img src="moose-cow.png" alt="Moose cow">
+  <img src="imgs/moose-cow.png" alt="Moose cow">
 
   <div class="joke-container" id="joke">
 
