--- a/moose-jokes/v2.html
+++ b/moose-jokes/v2.html
@@ -115,13 +115,13 @@
     <div class="container">
         <!-- Första figuren -->
         <div class="character">
-            <img src="character1.png" alt="Character 1">
+            <img src="imgs/char1.png" alt="Character 1">
             <div class="speech-bubble" id="joke"></div>
         </div>
 
         <!-- Andra figuren -->
         <div class="character">
-            <img src="character2.png" alt="Character 2">
+            <img src="imgs/char2.png" alt="Character 2">
             <div class="speech-bubble punchline" id="punchline"></div>
         </div>
     </div>
