--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -78,7 +78,7 @@
       { setup: "Vad mäter en vuxen älg i mankhöjd?", punchline: "Upp till 230 cm. Det var inte så roligt, men det var sant." },
       { setup: "Vad heter Dumas älgbok?", punchline: "De tre moosketörerna." },
       { setup: "Varför beter sig älgen så konstigt?", punchline: "Jag vet inte, men älgar är allt lite älgest." },
-      { setup: "Hur inleder älgen sin helg?", punchline: "Tacos och fredagsmoose." },
+      { setup: "Hur inleder älgen sin helg?", punchline: "Fredagsmoose med tacos." },
       { setup: "Vad väljer helst älgen på sin pizza?", punchline: "Endast tomat och moosarella." },
       { setup: "Vad kör älgen?", punchline: "Älgen kör en Moostang." },
       { setup: "Vad dricker älgarna till frukost?", punchline: "Åtminstone på semestern så dricker den mimoosa." },
