--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -85,9 +85,8 @@
       { setup: "Varför är älgen så trött när helgen kommer?", punchline: "För att hela veckan bestått av en massa moosten." },
       { setup: "Vad heter den mest musikaliska älgen?", punchline: "Det är Wolfgang Amadeus Moozart." },
       { setup: "Var tillverkar älgarna sitt vin?", punchline: "Deras vin görs framförallt i Mooseldalen." },
-      { setup: "Vad säger älgen när den hotar någon?", punchline: "Jag ska göra moose av dig." },
+      { setup: "Varför finns det så många boxande älgar?", punchline: "För att i ringen försöker de alltid göra moose av varandra." },
       { setup: "Vad säger älgen när den har piffat klart?", punchline: "Det där var grädden på mooset." },
-
     ];
 
     function showRandomJoke() {
