--- a/moose-jokes/index.html
+++ b/moose-jokes/index.html
@@ -87,6 +87,7 @@
       { setup: "Var tillverkar älgarna sitt vin?", punchline: "Deras vin görs framförallt i Mooseldalen." },
       { setup: "Varför finns det så många boxande älgar?", punchline: "För att i ringen försöker de alltid göra moose av varandra." },
       { setup: "Vad säger älgen när den har piffat klart?", punchline: "Det där var grädden på mooset." },
+      { setup: "Var handlar älgen när den är på besök i huvudstaden?", punchline: "På MOOSE." },
     ];
 
     function showRandomJoke() {
